--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "leetcode",
   "scripts": {
     "new": "node ./shell/createNew.js",
-    "test": "jest src/removeOuterParentheses/*.spec.js --coverage",
+    "test": "jest src/removeDuplicates/*.spec.js --coverage",
     "test:all": "jest src/**/*.spec.js --coverage",
-    "commit": "git pull && git add . && git commit -m 'auto commit' && git push"
+    "commit": "git pull && git add . && git commit -m 'auto commit' && git push",
+    "debug": "node src/removeDuplicates/index.js"
   },
   "author": "XueDong Wang",
   "license": "MIT",
