--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "leetcode",
   "scripts": {
     "new": "node ./shell/createNew.js",
-    "test": "jest src/binarySearch/*.spec.js --coverage",
+    "test": "jest src/rotate/*.spec.js --coverage",
     "test:all": "jest src/**/*.spec.js --coverage",
-    "commit": "git pull && git add . && git commit -m 'feat(binarySearch): 增加 binarySearch 并完成测试' && git push",
-    "debug": "node src/binarySearch/index.js"
+    "commit": "git pull && git add . && git commit -m 'feat(rotate): 增加 rotate 并完成测试' && git push",
+    "debug": "node src/rotate/index.js"
   },
   "author": "XueDong Wang",
   "license": "MIT",
