--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "leetcode",
   "scripts": {
     "new": "node ./shell/createNew.js",
-    "test": "jest src/isPalindrome/*.spec.js --coverage",
+    "test": "jest src/removeElements/*.spec.js --coverage",
     "test:all": "jest src/**/*.spec.js --coverage",
-    "commit": "git pull && git add . && git commit -m 'feat(isPalindrome): 增加 isPalindrome 并完成测试' && git push",
-    "debug": "node src/isPalindrome/index.js",
+    "commit": "git pull && git add . && git commit -m 'feat(removeElements): 增加 removeElements 并完成测试' && git push",
+    "debug": "node src/removeElements/index.js",
     "lint": "eslint --ext=.js src/*",
     "lint:fix": "eslint --ext=.js src/* --fix"
   },
